Fix btn--transparent css bug on mobile

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -16,4 +16,5 @@
   padding: 0;
   border-radius: 0;
   background-color: transparent;
+  color: inherit;
 }
